@@ -1,7 +1,9 @@
 ﻿[B]Changelog[/B]
-Fixed: NPO updated their video back-end which broke playback (Fixes #634)
+Added: more NPO Radio web cam streams (Fixes #643)
+Added: Genres to NPO.nl channel (Fixes #388)
 
 [I]Previous Changes[/I]
+Fixed: NPO updated their video back-end which broke playback (Fixes #634)
 Fixed: NPO date items did not work (Fixed #623)
 Fixed: NPO.nl changed their site which broke the alphabetical listing (Fixes #612)
 Fixed: NPO broke due to site changes (Fixes #605)
